--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -136,6 +136,7 @@
 
 /* map */
 .map-container{
+    position: relative;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -145,4 +146,39 @@
 
 .map-canvas{
     background-image: url('/images/grassland.png')
+}
+
+.map-right{
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 140px;
+    height: 70px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    padding: 20px;
+    align-items: center;
+}
+
+.map-right button{
+    width: 100px;
+    height: 30px;
+    margin: 10px 0;
+    background-color: lightseagreen;
+    outline: none;
+    color: white;
+    border: none;
+}
+
+.map-right button:hover{
+    box-shadow: 2px -2px rgba(250, 250, 250, 0.2);
+}
+
+.map-bottom {
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
