improve face ui

--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -5,18 +5,42 @@
     margin: 0;
 }
 
+#root{
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+}
+
 /* entry */
 .entry{
     display: flex;
     flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+
+/* map */
+.map-face{
+    border-radius: 20px;
+    position: absolute;
+    right: 10%;
+    top: 15%;
+    height: 400px;
+    padding: 0 20px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
 }
 
-.entry-title img{
-    width: 250px;
+.map-title img{
+    width: 220px;
 }
 
-.entry-play{
+.map-play{
     background-color: blueviolet;
     color: white;
     font-size: 30px;
@@ -25,16 +49,16 @@
     border-radius: 10px;
     width: 150px;
     height: 60px;
+    border: none;
 }
 
-.entry-play:active{
+.map-play:active{
     background-color: blueviolet;
     width: 155px;
     height: 65px;
 }
 
 
-/* map */
 .map-container{
     position: relative;
     margin: auto;
