--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -75,7 +75,7 @@
 .map-right{
     position: absolute;
     right: 0;
-    top: 0;
+    bottom: 32%;
     width: 140px;
     height: 70px;
     background-color: rgba(0, 0, 0, 0.5);
@@ -105,4 +105,14 @@
     position: absolute;
     bottom: 0;
     left: 0;
+}
+
+.map-logo{
+    position: absolute;
+    width: 300px;
+}
+
+.map-logo img{
+    width: 100%;
+    height: 100%;
 }
