--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -87,6 +87,11 @@
     align-items: center;
 }
 
+.map-right-owned{
+    width: 50px;
+    height: 50px;
+}
+
 .map-right button{
     width: 100px;
     height: 30px;
