move page logic

--- a/client/public/css/pages.css
+++ b/client/public/css/pages.css
@@ -1,3 +1,15 @@
+/* common */
+.btn-shadow{
+    box-shadow: none;
+}
+.btn-shadow:hover{
+    box-shadow: 4px 4px rgba(0, 0, 0, 0.2);
+}
+
+.btn-shadow:active{
+    box-shadow:  none;
+}
+
 /* popup */
 .overflow{
     position: fixed;
@@ -202,4 +214,37 @@
     width: 150px;
     height: 150px;
     margin-right: 20px;
+}
+
+/* page move */
+.move-content{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.move-mid-img{
+    height: 200px;
+}
+
+.move-img{
+    width: 150px;
+    height: 150px;
+}
+
+.move-house{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.move-btn{
+    width: 150px;
+    height: 60px;
+    font-size: 30px;
+    border-radius: 20px;
+    outline: none;
+    border: none;
+    background-color: blueviolet;
+    color: white;
 }
