--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -114,7 +114,11 @@
 
 .map-logo{
     position: absolute;
+    top: 5px;
     width: 300px;
+    border: 1px lightgray solid;
+    border-radius: 50px;
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
 .map-logo img{
