owner withdraw page logic

--- a/client/public/css/pages.css
+++ b/client/public/css/pages.css
@@ -349,3 +349,27 @@
     outline: none;
     border-radius: 10px;
 }
+
+/* page owner */
+.owner-container{
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.owner-container p{
+    font-size: 20px;
+}
+
+.owner-container button{
+    width: 150px;
+    height: 50px;
+    font-size: 20px;
+    background-color: blueviolet;
+    outline: none;
+    border: none;
+    color: white;
+    margin: 20px 0;
+}
