--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -75,9 +75,7 @@
 .map-right{
     position: absolute;
     right: 0;
-    bottom: 32%;
-    width: 180px;
-    height: 70px;
+    bottom: 0;
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
     display: flex;
@@ -87,23 +85,42 @@
     align-items: center;
 }
 
-.map-right-owned{
-    width: 50px;
-    height: 50px;
+.map-right-owned-div{
+    width: 80px;
+    height: 80px;
+    box-sizing: border-box;
+    background-color: rgb(136, 181, 15);
+    border: 1px lightgray solid;
+    margin: 10px;
 }
 
-.map-right button{
-    width: 100px;
-    height: 30px;
-    margin: 10px 0;
-    background-color: lightseagreen;
-    outline: none;
-    color: white;
-    border: none;
+.map-right-owned-div img{
+    width: 100%;
+    height: 100%;
 }
 
-.map-right button:hover{
-    box-shadow: 2px -2px rgba(250, 250, 250, 0.2);
+.map-right-icon{
+    position: relative;
+    background-color: white;
+    width: 80px;
+    height: 80px;
+    margin: 10px;
+    border-radius: 10px;
+    border: 1px gray solid;
+}
+
+.map-right-icon img{
+    width: 100%;
+    height: 100%;
+}
+
+.icon-cover{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    background-color: rgba(100, 100, 100, 0.6);
 }
 
 .map-bottom {
