--- a/client/public/css/pages.css
+++ b/client/public/css/pages.css
@@ -10,6 +10,14 @@
     box-shadow:  none;
 }
 
+.btn-small{
+    width: 50px;
+    height: 25px;
+    font-size: 12px;
+    outline: none;
+    border: none;
+}
+
 .btn-mid{
     width: 80px;
     height: 30px;
